--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,9 +1,14 @@
 {
   "HOME": "Accueil",
+  "LOGIN": "Se connecter",
+  "SIGNIN": "S'inscrire",
+  "ACCOUNT": "Compte",
+  "LOGOUT": "Déconnexion",
   "CARD_SUBJECT_ONE": "est un Pokemon de type",
   "CARD_SUBJECT_TWO": "est un Pokemon de type",
   "POKEMON": " ",
   "AND": "et",
+  "OF": "de",
   "WEIGHT": "Poids",
   "HEIGHT": "Taille",
   "LEVEL": "Niveau",
