Add Login check if user exists Add some translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,15 @@
   "HOME": "Home",
   "LOGIN": "Login",
   "SIGNIN": "Sign In",
+  "USERNAME": "Username",
+  "PASSWORD": "Password",
+  "PASSWORD_CONFIRM": "Confirm password",
+  "PASSWORD_CONFIRM_REQUIRED": "Confirm password is required",
+  "PASSWORD_NOT_MATCHING": "Your password does not match",
+  "IS_REQUIRED": "is required",
+  "VALIDATE": "Validate",
+  "ACCOUNT": "Account",
+  "LOGOUT": "Log Out",
   "CARD_SUBJECT_ONE": "is a",
   "CARD_SUBJECT_TWO": "is a dual-type",
   "POKEMON": "Pokemon",
