--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,6 +2,13 @@
   "HOME": "Accueil",
   "LOGIN": "Se connecter",
   "SIGNIN": "S'inscrire",
+  "USERNAME": "Nom d'utilisateur",
+  "PASSWORD": "Mot de passe",
+  "PASSWORD_CONFIRM": "Confirmer le mot de passe",
+  "PASSWORD_CONFIRM_REQUIRED": "La confirmation du mot de passe",
+  "PASSWORD_NOT_MATCHING": "Les mots de passe ne correspondent pas",
+  "IS_REQUIRED": "est requis",
+  "VALIDATE": "Valider",
   "ACCOUNT": "Compte",
   "LOGOUT": "Déconnexion",
   "CARD_SUBJECT_ONE": "est un Pokemon de type",
