Some UI changes
* Add translation

* Remove link on pagination

* Upgrade Login Signin buttons

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,8 @@
   "LOGOUT": "Log Out",
   "CARD_SUBJECT_ONE": "is a",
   "CARD_SUBJECT_TWO": "is a dual-type",
+  "FIRST": "First",
+  "LAST": "Last",
   "POKEMON": "Pokemon",
   "AND": "and",
   "OF": "de",
