--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -13,6 +13,8 @@
   "LOGOUT": "Déconnexion",
   "CARD_SUBJECT_ONE": "est un Pokemon de type",
   "CARD_SUBJECT_TWO": "est un Pokemon de type",
+  "FIRST": "Première",
+  "LAST": "Dernière",
   "POKEMON": " ",
   "AND": "et",
   "OF": "de",
