--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,7 +107,7 @@
     "Slowbro": "Slowbro",
     "Magnemite": "Magnemite",
     "Magneton": "Magneton",
-    "Farfetch'd": "Farfetch'd",
+    "Farfetch’d": "Farfetch'd",
     "Doduo": "Doduo",
     "Dodrio": "Dodrio",
     "Seel": "Seel",
