Rework toggle language
Remove background theme for now

WIP toggle theme : button instead of toggle

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,7 @@
 {
   "HOME": "Accueil",
+  "en": "Anglais",
+  "fr": "Français",
   "LOGIN": "Se connecter",
   "SIGNIN": "S'inscrire",
   "USERNAME": "Nom d'utilisateur",
