--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -13,8 +13,8 @@
   "VALIDATE": "Valider",
   "ACCOUNT": "Compte",
   "LOGOUT": "Déconnexion",
-  "CARD_SUBJECT_ONE": "est un Pokemon de type",
-  "CARD_SUBJECT_TWO": "est un Pokemon de type",
+  "SEARCH POKEMON": "Rechercher un Pokémon",
+  "CARD_SUBJECT": "est un Pokemon de type",
   "FIRST": "Première",
   "LAST": "Dernière",
   "POKEMON": " ",
@@ -27,7 +27,7 @@
   "EXCHANGE": "Echanger",
   "ATTACKS": "Attaques",
   "NAMES": {
-    "Bulbasaur": "Bulbizarre",
+    "BULBASAUR": "Bulbizarre",
     "Ivysaur": "Herbizarre",
     "Venusaur": "Florizarre",
     "Charmander": "Salamèche",
