Add minor UI improvments
Rework and add some translation

Add default languages 'en'

Add chip when filtering by name

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,9 @@
   "VALIDATE": "Validate",
   "ACCOUNT": "Account",
   "LOGOUT": "Log Out",
-  "SEARCH POKEMON": "Search Pokémon",
+  "SEARCH POKEMON": "Search Pokémon by name",
+  "FILTER ON": "Filter on :",
+  "NAME": "Name",
   "CARD_SUBJECT_ONE": "is a",
   "CARD_SUBJECT_TWO": "is a dual-type",
   "FIRST": "First",
@@ -28,7 +30,7 @@
   "EXCHANGE": "Exchange",
   "ATTACKS": "Attacks",
   "NAMES": {
-    "BULBASAUR": "Bulbasaur",
+    "Bulbasaur": "Bulbasaur",
     "Ivysaur": "Ivysaur",
     "Venusaur": "Venusaur",
     "Charmander": "Charmander",
