--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,7 +14,10 @@
   "ACCOUNT": "Compte",
   "LOGOUT": "Déconnexion",
   "SEARCH POKEMON": "Rechercher un Pokémon",
-  "CARD_SUBJECT": "est un Pokemon de type",
+  "FILTER ON": "Filtre sur : ",
+  "NAME": "Nom",
+  "CARD_SUBJECT_ONE": "est un Pokemon de type",
+  "CARD_SUBJECT_TWO": "est un Pokemon de type",
   "FIRST": "Première",
   "LAST": "Dernière",
   "POKEMON": " ",
@@ -27,7 +30,7 @@
   "EXCHANGE": "Echanger",
   "ATTACKS": "Attaques",
   "NAMES": {
-    "BULBASAUR": "Bulbizarre",
+    "Bulbasaur": "Bulbizarre",
     "Ivysaur": "Herbizarre",
     "Venusaur": "Florizarre",
     "Charmander": "Salamèche",
