Create filter by type

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -13,7 +13,7 @@
   "VALIDATE": "Valider",
   "ACCOUNT": "Compte",
   "LOGOUT": "Déconnexion",
-  "SEARCH POKEMON": "Rechercher un Pokémon",
+  "SEARCH POKEMON": "Rechercher un Pokémon par nom",
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
   "CARD_SUBJECT_ONE": "est un Pokemon de type",
@@ -190,7 +190,7 @@
     "flying": "Vol",
     "rock": "Roche",
     "ghost": "Spectre",
-    "darkness": "Ténèbres",
+    "dark": "Ténèbres",
     "fighting": "Combat",
     "steel": "Acier",
     "dragon": "Dragon",
