Done Signin and login

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,8 +2,11 @@
   "HOME": "Home",
   "en": "English",
   "fr": "French",
+  "USER POKEDEX": "{{user}}'s Pokedex",
   "LOGIN": "Login",
   "SIGNIN": "Sign In",
+  "ACCOUNT": "Account",
+  "LOGOUT": "Log Out",
   "USERNAME": "Username",
   "PASSWORD": "Password",
   "PASSWORD_CONFIRM": "Confirm password",
@@ -11,8 +14,6 @@
   "PASSWORD_NOT_MATCHING": "Your password does not match",
   "IS_REQUIRED": "is required",
   "VALIDATE": "Validate",
-  "ACCOUNT": "Account",
-  "LOGOUT": "Log Out",
   "SEARCH POKEMON": "Search Pokémon by name",
   "FILTER ON": "Filter on :",
   "NAME": "Name",
