--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,8 +2,11 @@
   "HOME": "Accueil",
   "en": "Anglais",
   "fr": "Français",
+  "USER POKEDEX": "Pokedex de {{user}}",
   "LOGIN": "Se connecter",
   "SIGNIN": "S'inscrire",
+  "ACCOUNT": "Compte",
+  "LOGOUT": "Déconnexion",
   "USERNAME": "Nom d'utilisateur",
   "PASSWORD": "Mot de passe",
   "PASSWORD_CONFIRM": "Confirmer le mot de passe",
@@ -11,8 +14,6 @@
   "PASSWORD_NOT_MATCHING": "Les mots de passe ne correspondent pas",
   "IS_REQUIRED": "est requis",
   "VALIDATE": "Valider",
-  "ACCOUNT": "Compte",
-  "LOGOUT": "Déconnexion",
   "SEARCH POKEMON": "Rechercher un Pokémon par nom",
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
