WIP Pokémon team
Rework Pokémon card

TODO keep user persistent

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,8 @@
   "VALIDATE": "Validate",
   "SEARCH POKEMON": "Search Pokémon by name",
   "FILTER ON": "Filter on :",
+  "DETAILS": "Details",
+  "ADD": "Add",
   "NAME": "Name",
   "CARD_SUBJECT_ONE": "is a",
   "CARD_SUBJECT_TWO": "is a dual-type",
