--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -17,6 +17,8 @@
   "SEARCH POKEMON": "Rechercher un Pokémon par nom",
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
+  "DETAILS": "Détails",
+  "ADD": "Ajouter",
   "CARD_SUBJECT_ONE": "est un Pokemon de type",
   "CARD_SUBJECT_TWO": "est un Pokemon de type",
   "FIRST": "Première",
