Add Pokemon icons

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,7 +115,7 @@
     "Slowbro": "Slowbro",
     "Magnemite": "Magnemite",
     "Magneton": "Magneton",
-    "Farfetch’d": "Farfetch'd",
+    "Farfetch’d": "Farfetch’d",
     "Doduo": "Doduo",
     "Dodrio": "Dodrio",
     "Seel": "Seel",
@@ -288,7 +288,7 @@
     "Slowbro": "Lives lazily by the sea. If the Shellder on its tail comes off, it becomes a Slowpoke again. ",
     "Magnemite": "It is born with the ability to defy gravity. It floats in air on powerful electromagnetic waves. ",
     "Magneton": "Generates strange radio signals. It raises the temperature by 3.6F degrees within 3,300 feet. ",
-    "Farfetch'd": "Lives where reedy plants grow. They are rarely seen, so it's thought their numbers are decreasing. ",
+    "Farfetch’d": "Lives where reedy plants grow. They are rarely seen, so it's thought their numbers are decreasing. ",
     "Doduo": "Its short wings make flying difficult. Instead, this Pokémon runs at high speed on developed legs. ",
     "Dodrio": "One of Doduo's 2 heads splits to form a unique species. It runs close to 40 MPH in prairies. ",
     "Seel": "Loves freezing cold conditions. Relishes swimming in a frigid climate of around 14F degrees. ",
