--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -115,7 +115,7 @@
     "Slowbro": "Flagadoss",
     "Magnemite": "Magnéti",
     "Magneton": "Magnéton",
-    "Farfetch'd": "Canarticho",
+    "Farfetch’d": "Canarticho",
     "Doduo": "Doduo",
     "Dodrio": "Dodrio",
     "Seel": "Otaria",
@@ -288,7 +288,7 @@
     "Slowbro": " Il se prélasse au soleil. Si le Kokiyas, accroché à sa queue s'en va, il redevient un Ramoloss.",
     "Magnemite": " Sa nature défie les lois de la gravité. Il flotte grâce à un champ électromagnétique.",
     "Magneton": " Il émet un signal radio étrange. Sa présence augmente la température de 1 degré dans un rayon de 1000 m.",
-    "Farfetch'd": " Ils vivent près des roseaux. On en voit peu, ils sont peut-être en voie d'extinction.",
+    "Farfetch’d": " Ils vivent près des roseaux. On en voit peu, ils sont peut-être en voie d'extinction.",
     "Doduo": " Ses petites ailes ne lui permettent pas de voler, mais il peut courir très rapidement.",
     "Dodrio": " Quand une des 2 têtes d'un Doduo se divise, il devient un Dodrio capable de courir à 60 Km/h.",
     "Seel": " Il est à l'aise dans les endroits froids et gelés. Il peut nager dans l'eau à 0 degré.",
