Minor UI changes
Add some translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,7 +17,7 @@
   "SEARCH POKEMON": "Search Pokémon by name",
   "FILTER ON": "Filter on :",
   "DETAILS": "Details",
-  "ADD": "Add",
+  "ADD": "Add to team",
   "NAME": "Name",
   "CARD_SUBJECT_ONE": "is a",
   "CARD_SUBJECT_TWO": "is a dual-type",
@@ -32,6 +32,26 @@
   "EVOLVE": "Evolve",
   "EXCHANGE": "Exchange",
   "ATTACKS": "Attacks",
+  "TYPES": {
+    "fire": "Fire-type",
+    "grass": "Grass-type",
+    "water": "Water-type",
+    "electric": "Electric-type",
+    "flying": "Flying-type",
+    "rock": "Rock-type",
+    "ghost": "Ghost-type",
+    "darkness": "Darkness-type",
+    "fighting": "Fighting-type",
+    "steel": "Steel-type",
+    "dragon": "Dragon-type",
+    "bug": "Bug-type",
+    "normal": "Normal-type",
+    "poison": "Poison-type",
+    "ground": "Ground-type",
+    "fairy": "Fairy-type",
+    "psychic": "Psychic-type",
+    "ice": "Ice-type"
+  },
   "NAMES": {
     "Bulbasaur": "Bulbasaur",
     "Ivysaur": "Ivysaur",
@@ -184,26 +204,6 @@
     "Dragonite": "Dragonite",
     "Mewtwo": "Mewtwo",
     "Mew": "Mew"
-  },
-  "TYPES": {
-    "fire": "Fire-type",
-    "grass": "Grass-type",
-    "water": "Water-type",
-    "electric": "Electric-type",
-    "flying": "Flying-type",
-    "rock": "Rock-type",
-    "ghost": "Ghost-type",
-    "darkness": "Darkness-type",
-    "fighting": "Fighting-type",
-    "steel": "Steel-type",
-    "dragon": "Dragon-type",
-    "bug": "Bug-type",
-    "normal": "Normal-type",
-    "poison": "Poison-type",
-    "ground": "Ground-type",
-    "fairy": "Fairy-type",
-    "psychic": "Psychic-type",
-    "ice": "Ice-type"
   },
   "DESC": {
     "Bulbasaur": "It can go for days without eating a single morsel. In the bulb on its back, it stores energy. ",
