--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,7 +18,7 @@
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
   "DETAILS": "Détails",
-  "ADD": "Ajouter",
+  "ADD": "Ajouter à l'équipe",
   "CARD_SUBJECT_ONE": "est un Pokemon de type",
   "CARD_SUBJECT_TWO": "est un Pokemon de type",
   "FIRST": "Première",
@@ -32,6 +32,26 @@
   "EVOLVE": "Evoluer",
   "EXCHANGE": "Echanger",
   "ATTACKS": "Attaques",
+  "TYPES": {
+    "fire": "Feu",
+    "grass": "Plante",
+    "water": "Eau",
+    "electric": "Electrik",
+    "flying": "Vol",
+    "rock": "Roche",
+    "ghost": "Spectre",
+    "dark": "Ténèbres",
+    "fighting": "Combat",
+    "steel": "Acier",
+    "dragon": "Dragon",
+    "bug": "Insecte",
+    "normal": "Normal",
+    "poison": "Poison",
+    "ground": "Sol",
+    "fairy": "Fée",
+    "psychic": "Psy",
+    "ice": "Glace"
+  },
   "NAMES": {
     "Bulbasaur": "Bulbizarre",
     "Ivysaur": "Herbizarre",
@@ -184,26 +204,6 @@
     "Dragonite": "Dracolosse",
     "Mewtwo": "Mewtwo",
     "Mew": "Mew"
-  },
-  "TYPES": {
-    "fire": "Feu",
-    "grass": "Plante",
-    "water": "Eau",
-    "electric": "Electrik",
-    "flying": "Vol",
-    "rock": "Roche",
-    "ghost": "Spectre",
-    "dark": "Ténèbres",
-    "fighting": "Combat",
-    "steel": "Acier",
-    "dragon": "Dragon",
-    "bug": "Insecte",
-    "normal": "Normal",
-    "poison": "Poison",
-    "ground": "Sol",
-    "fairy": "Fée",
-    "psychic": "Psy",
-    "ice": "Glace"
   },
   "DESC": {
     "Bulbasaur": "Il peut survivre plusieurs jours sans manger. Le bulbe sur son dos emmagasine de l'énergie.",
