Rework type buttons

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,7 +40,7 @@
     "flying": "Flying-type",
     "rock": "Rock-type",
     "ghost": "Ghost-type",
-    "darkness": "Darkness-type",
+    "dark": "Dark-type",
     "fighting": "Fighting-type",
     "steel": "Steel-type",
     "dragon": "Dragon-type",
