Improve profil popover

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,7 @@
   "PASSWORD_NOT_MATCHING": "Your password does not match",
   "IS_REQUIRED": "is required",
   "VALIDATE": "Validate",
-  "SEARCH POKEMON": "Search Pokémon by name",
+  "SEARCH POKEMON": "Search a Pokémon",
   "FILTER ON": "Filter on :",
   "DETAILS": "Details",
   "ADD": "Add to team",
