--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,7 +14,7 @@
   "PASSWORD_NOT_MATCHING": "Les mots de passe ne correspondent pas",
   "IS_REQUIRED": "est requis",
   "VALIDATE": "Valider",
-  "SEARCH POKEMON": "Rechercher un Pokémon par nom",
+  "SEARCH POKEMON": "Rechercher un Pokémon",
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
   "DETAILS": "Détails",
