feat: add legendary filter, add isLeg and gen in Pokémon interface

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
   "HOME": "Home",
   "en": "English",
   "fr": "French",
-  "USER POKEDEX": "{{user}}'s Pokedex",
+  "USER POKEDEX": "{{user}}'s Pokédex",
   "LOGIN": "Login",
   "SIGNIN": "Sign In",
   "ACCOUNT": "Account",
@@ -23,7 +23,8 @@
   "CARD_SUBJECT_TWO": "is a dual-type",
   "FIRST": "First",
   "LAST": "Last",
-  "POKEMON": "Pokemon",
+  "POKEMON": "Pokémon",
+  "LEGENDARY": "Legendary",
   "AND": "and",
   "OF": "de",
   "WEIGHT": "Weight",
