--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,7 +2,7 @@
   "HOME": "Accueil",
   "en": "Anglais",
   "fr": "Français",
-  "USER POKEDEX": "Pokedex de {{user}}",
+  "USER POKEDEX": "Pokédex de {{user}}",
   "LOGIN": "Se connecter",
   "SIGNIN": "S'inscrire",
   "ACCOUNT": "Compte",
@@ -19,11 +19,12 @@
   "NAME": "Nom",
   "DETAILS": "Détails",
   "ADD": "Ajouter à l'équipe",
-  "CARD_SUBJECT_ONE": "est un Pokemon de type",
-  "CARD_SUBJECT_TWO": "est un Pokemon de type",
+  "CARD_SUBJECT_ONE": "est un Pokémon de type",
+  "CARD_SUBJECT_TWO": "est un Pokémon de type",
   "FIRST": "Première",
   "LAST": "Dernière",
-  "POKEMON": " ",
+  "POKEMON": "Pokémon",
+  "LEGENDARY": "Légendaire",
   "AND": "et",
   "OF": "de",
   "WEIGHT": "Poids",
