feat: add translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,14 +19,18 @@
   "DETAILS": "Details",
   "ADD": "Add to team",
   "NAME": "Name",
-  "CARD_SUBJECT_ONE": "is a",
-  "CARD_SUBJECT_TWO": "is a dual-type",
+  "CARD_SUBJECT_ONE": "is",
+  "CARD_SUBJECT_TWO": "is dual-type",
   "FIRST": "First",
   "LAST": "Last",
   "POKEMON": "Pokémon",
   "LEGENDARY": "Legendary",
   "AND": "and",
   "OF": "de",
+  "CANCEL": "Cancel",
+  "CONFIRM": "Confirm",
+  "NEW_POKEMON_NAME": "New Pokémon name",
+  "CHANGE_USERNAME" : "Change username",
   "WEIGHT": "Weight",
   "HEIGHT": "Height",
   "LEVEL": "Level",
