--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -19,14 +19,18 @@
   "NAME": "Nom",
   "DETAILS": "Détails",
   "ADD": "Ajouter à l'équipe",
-  "CARD_SUBJECT_ONE": "est un Pokémon de type",
-  "CARD_SUBJECT_TWO": "est un Pokémon de type",
+  "CARD_SUBJECT_ONE": "est de type",
+  "CARD_SUBJECT_TWO": "est de type",
   "FIRST": "Première",
   "LAST": "Dernière",
   "POKEMON": "Pokémon",
   "LEGENDARY": "Légendaire",
   "AND": "et",
   "OF": "de",
+  "CANCEL": "Annuler",
+  "CONFIRM": "Confirmer",
+  "NEW_POKEMON_NAME": "Nouveau nom du Pokémon",
+  "CHANGE_USERNAME" : "Changer de nom d'utilisateur",
   "WEIGHT": "Poids",
   "HEIGHT": "Taille",
   "LEVEL": "Niveau",
