i18n: add select type translation

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -15,6 +15,7 @@
   "IS_REQUIRED": "est requis",
   "VALIDATE": "Valider",
   "SEARCH POKEMON": "Rechercher un Pokémon",
+  "SELECT TYPE": "Rechercher par type",
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
   "DETAILS": "Détails",
