--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "HOME": "Home",
-  "en": "En",
-  "fr": "Fr",
+  "en": "English",
+  "fr": "French",
   "USER POKEDEX": "{{user}}'s Pokédex",
   "LOGIN": "Login",
   "SIGNIN": "Sign In",
