--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,7 +1,7 @@
 {
   "HOME": "Accueil",
-  "en": "En",
-  "fr": "Fr",
+  "en": "Anglais",
+  "fr": "Français",
   "USER POKEDEX": "Pokédex de {{user}}",
   "LOGIN": "Se connecter",
   "SIGNIN": "S'inscrire",
