--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
   "IS_REQUIRED": "is required",
   "VALIDATE": "Validate",
   "SEARCH POKEMON": "Search a Pokémon",
-  "SELECT TYPE": "Search by type",
+  "SELECT TYPE": "Type(s)",
   "FILTER ON": "Filter on :",
   "DETAILS": "Details",
   "ADD": "Add to team",
