i18n: add Encounter in translation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,6 +37,7 @@
   "LEVEL": "Level",
   "EVOLVE": "Evolve",
   "EXCHANGE": "Exchange",
+  "ENCOUNTER": "Encounter",
   "ATTACKS": "Attacks",
   "TYPES": {
     "fire": "Fire-type",
