--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -37,6 +37,7 @@
   "LEVEL": "Niveau",
   "EVOLVE": "Evoluer",
   "EXCHANGE": "Echanger",
+  "ENCOUNTER": "Rencontre",
   "ATTACKS": "Attaques",
   "TYPES": {
     "fire": "Feu",
