feat: add catch feature in Catch Mode

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,7 +18,7 @@
   "SELECT TYPE": "Search by type",
   "FILTER ON": "Filter on :",
   "DETAILS": "Details",
-  "ADD": "Add to team",
+  "CATCH": "Catch",
   "NAME": "Name",
   "CARD_SUBJECT_ONE": "is",
   "CARD_SUBJECT_TWO": "is dual-type",
