--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -19,7 +19,7 @@
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
   "DETAILS": "Détails",
-  "ADD": "Ajouter à l'équipe",
+  "CATCH": "Capturer",
   "CARD_SUBJECT_ONE": "est de type",
   "CARD_SUBJECT_TWO": "est de type",
   "FIRST": "Première",
