style: header refacto

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
   "SELECT TYPE": "Type(s)",
   "FILTER ON": "Filter on :",
   "DETAILS": "Details",
+  "CATCH MODE": "Catch Mode",
   "CATCH": "Catch",
   "NAME": "Name",
   "CARD_SUBJECT_ONE": "is",
