--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -19,6 +19,7 @@
   "FILTER ON": "Filtre sur : ",
   "NAME": "Nom",
   "DETAILS": "Détails",
+  "CATCH MODE": "Mode Capture",
   "CATCH": "Capturer",
   "CARD_SUBJECT_ONE": "est de type",
   "CARD_SUBJECT_TWO": "est de type",
